# ds

./: README.md  meson.build
include/ds/: hashmap.h  iter.h  matrix.h  tree.h  vec.h
src/: container.c  core.h  hashmap.c  iter.c  matrix.c  tree.c  vec.c
src/bench/: hashmap.c
src/test/: container.c  hashmap.c  iter.c  tree.c
